# lww-usc

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml
docs/: Makefile  api.rst  citations.rst  cli.rst  conf.py  config_guide.rst  config_usage.rst  index.rst  installation.rst  physics.rst  quickstart.rst
example/: lww_transient.ipynb  lww_visualization.ipynb  steady_run.py  transient_run.py  transient_run_v2.py
scripts/: profile_transient.py
src/lww_transport/: __init__.py  _cpp_kernels.cpp  _native_kernels.py  _numba_kernels.py  cli.py  config.py  config_refactored.py  core.py  linalg.py  simulator.py  visualization.py
tests/: test_core.py
